<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_header"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="-22dp"
        android:layout_marginEnd="-22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="返回"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#212121" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_register"
            android:textColor="#333333"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_label_account"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_header" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@null"
        android:hint="@string/input_email"
        android:inputType="textEmailAddress"
        android:textColorHint="#CCCCCC"
        android:textSize="16sp"
        android:autofillHints="emailAddress"
        android:imeOptions="actionNext"

        app:layout_constraintBaseline_toBaselineOf="@+id/tv_label_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_account" />

    <View
        android:id="@+id/view_divider_1"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_account" />

    <TextView
        android:id="@+id/tv_label_nickname"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_nickname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@null"
        android:hint="@string/input_nickname"
        android:inputType="text"
        android:textColorHint="#CCCCCC"
        android:textSize="16sp"
        android:autofillHints="name"
        android:imeOptions="actionNext"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_label_nickname"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_1" />

    <View
        android:id="@+id/view_divider_nickname"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <TextView
        android:id="@+id/tv_label_password"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@null"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:textColorHint="#CCCCCC"
        android:textSize="16sp"
        android:autofillHints="password"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:paddingEnd="8dp"

        app:layout_constraintEnd_toStartOf="@+id/btn_toggle_password"
        app:layout_constraintStart_toEndOf="@+id/tv_label_password"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_nickname" />

    <ImageButton
        android:id="@+id/btn_toggle_password"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_visibility_off"
        app:layout_constraintBottom_toBottomOf="@+id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_password" />

    <View
        android:id="@+id/view_divider_2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_label_password_confirm"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_password_confirm"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_password_confirm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@null"
        android:hint="@string/input_password_again"
        android:inputType="textPassword"
        android:textColorHint="#CCCCCC"
        android:textSize="16sp"
        android:autofillHints="password"
        android:imeOptions="actionNext|flagNoExtractUi"
        android:paddingEnd="8dp"

        app:layout_constraintEnd_toStartOf="@+id/btn_toggle_password_confirm"
        app:layout_constraintStart_toEndOf="@+id/tv_label_password_confirm"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_2" />

    <ImageButton
        android:id="@+id/btn_toggle_password_confirm"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_password_visibility"
        android:padding="8dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_visibility_off"
        app:layout_constraintBottom_toBottomOf="@+id/et_password_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_password_confirm" />

    <View
        android:id="@+id/view_divider_password_confirm"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password_confirm" />

    <TextView
        android:id="@+id/tv_label_captcha"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/verifyCode"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_captcha"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_captcha"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@null"
        android:digits="0123456789"
        android:hint="@string/input_verifyCode"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="6"
        android:textColorHint="#CCCCCC"
        android:textSize="16sp"

        app:layout_constraintEnd_toStartOf="@+id/iv_captcha_code"
        app:layout_constraintStart_toEndOf="@+id/tv_label_captcha"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_password_confirm" />

    <ImageView
        android:id="@+id/iv_captcha_code"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:focusable="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_placeholder_code"
        android:contentDescription="@string/verifyCode"
        app:layout_constraintBottom_toBottomOf="@+id/et_captcha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_captcha" />

    <View
        android:id="@+id/view_divider_3"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#EEEEEE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_captcha" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_register_selector"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:enabled="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider_3" />

</androidx.constraintlayout.widget.ConstraintLayout>